--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }else{
       clearInterval(_temp);
     }
-  },100)
+  },100);
 </script>
 
   <title> 人生没有如果 </title>
@@ -449,11 +449,11 @@
   <span class="author" itemprop="copyrightHolder">Dawn Wang</span>
 </div>
 
-<div class="powered-by">
+<div class="powered-by" style="font-size:12px;">
   由 <a class="theme-link" href="http://hexo.io">Hexo</a> 强力驱动
 </div>
 
-<div class="theme-info">
+<div class="theme-info" style="font-size:12px;">
   主题 -
   <a class="theme-link" href="https://github.com/iissnan/hexo-theme-next">
     NexT
