--- a/index.html
+++ b/index.html
@@ -450,11 +450,11 @@
 </div>
 
 <div class="powered-by" style="font-size:12px;">
-  由 <a class="theme-link" href="http://hexo.io">Hexo</a> 强力驱动
+  Powered By <a class="theme-link" href="http://hexo.io">Hexo</a> & <a class="theme-link" href="http://github.com">GitHub</a>
 </div>
 
 <div class="theme-info" style="font-size:12px;">
-  主题 -
+   • Theme By 
   <a class="theme-link" href="https://github.com/iissnan/hexo-theme-next">
     NexT
   </a>
