--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 </div>
 
 <div class="theme-info" style="font-size:12px;">
-   • Theme By 
+  Theme By 
   <a class="theme-link" href="https://github.com/iissnan/hexo-theme-next">
     NexT
   </a>
